# fakeroot-sqlite

./: Makefile.am  configure.ac  faked-sqlite.c  faked-text.c  faked.c
scripts/: fakeroot.in
test/: Makefile.am  checktiming  defs.in  t.chmod_dev  t.mknod  t.no_ld_preload  t.no_ld_preload_link  t.timing  t.touchinstall  timedchown.c  timedstat.c
